fixed navbar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,12 @@ img, video {
     left: 0;
     top: 0;
   }
-    .navbar.responsive a:nth-child(2){
-         margin-left: 50px;
+     a:nth-child(2){
+         margin-left: 0px;
+    }
+
+     .navbar.responsive a:not(:first-child){
+         margin-left: 42px;
     }
   .navbar.responsive a {
     float: none;
